# SERVEEZ-CVE

./: README.md
attack_files/: leak.py
serveez-0.2.2/: AUTHORS  BUGS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README-alpha  README-cross  THANKS  aclocal.m4  autogen.sh  config.status  configure  configure.ac  libtool
serveez-0.2.2/build-aux/: common.mk  fake-soelim  fake-soelim.in
serveez-0.2.2/build-aux/guile-baux/: a-dash-dash-b.scm  as-C-byte-array  c-tsar  c2x  common.scm  file-newer-than.scm  filenamez.scm  gbaux-do  punify  read-string.scm  s3as  scheme-scanner.scm  stemname.scm  temporary-file.scm  ts-base.scm  ts-output.scm  tsar  tsin  write-string.scm
serveez-0.2.2/data/: ChangeLog  PLATFORMS
serveez-0.2.2/doc/: ChangeLog  Makefile  Makefile.am  Makefile.in  blurb.texi  guile-api.texh  guile-api.texi  guile-boot.texh  guile-boot.texi  mb-tail  serveez-api.texh  serveez-api.texi  serveez-config.1  serveez-config.1in  serveez.1in  serveez.info  serveez.texi  version.texi
serveez-0.2.2/m4/: inc.m4  snuggle.m4
serveez-0.2.2/src/: ChangeLog  Makefile  Makefile.am  Makefile.in  action.h  cfgfile.c  cfgfile.h  changedir.h  config.h  config.h.in  cpp-tricks.h  gi.c  gi.h  gsk-make  gsk.c  guile-api.c  guile-api.h  guile-bin.c  guile-bin.h  guile-boot.c  guile-boot.scm  guile-missing.h  guile-missing.h.in  guile-server.c  guile-server.h  guile-server.x  guile.c  guile.h  guile.x  le-u32-hash.h  libserveez.h  libserveez.h-TEMPLATE  misc-macros.h  networking-headers.h  o-binary.h  option.c  option.h  serveez-config  serveez-config.in  serveez.c  (+8 more)
serveez-0.2.2/src/.deps/: cfgfile.Po  gi.Po  guile-bin.Po  guile-server.Po  guile.Po  option.Po  serveez.Po
serveez-0.2.2/src/ctrl-server/: Makefile  Makefile.am  Makefile.in  control-proto.c  control-proto.h
serveez-0.2.2/src/ctrl-server/.deps/: control-proto.Po
serveez-0.2.2/src/fakeident-server/: Makefile  Makefile.am  Makefile.in  ident-proto.c  ident-proto.h
serveez-0.2.2/src/fakeident-server/.deps/: ident-proto.Po
serveez-0.2.2/src/foo-server/: Makefile  Makefile.am  Makefile.in  foo-proto.c  foo-proto.h
serveez-0.2.2/src/foo-server/.deps/: foo-proto.Po
serveez-0.2.2/src/gi-sup/: defsmob.h  fastint.h  finangle.h  humdrum.h  level.h  mkhash.h  modsup.h
serveez-0.2.2/src/guile-server/: ChangeLog  Makefile  Makefile.am  Makefile.in  echo-server.scm  inetd.scm  mandel-client.scm  mandel-shared.scm
serveez-0.2.2/src/http-server/: Makefile  Makefile.am  Makefile.in  http-cache.c  http-cache.h  http-cgi.c  http-cgi.h  http-core.c  http-core.h  http-dirlist.c  http-dirlist.h  http-proto.c  http-proto.h
serveez-0.2.2/src/http-server/.deps/: http-cache.Po  http-cgi.Po  http-core.Po  http-dirlist.Po  http-proto.Po
serveez-0.2.2/src/irc-core/: Makefile  Makefile.am  Makefile.in  irc-core.c  irc-core.h
serveez-0.2.2/src/irc-core/.deps/: irc-core.Po
serveez-0.2.2/src/irc-server/: Makefile  Makefile.am  Makefile.in  irc-config.c  irc-config.h  irc-crypt.c  irc-crypt.h  irc-event-1.c  irc-event-2.c  irc-event-3.c  irc-event-4.c  irc-event-5.c  irc-event-6.c  irc-event-7.c  irc-event.h  irc-proto.c  irc-proto.h  irc-server.c  irc-server.h  timestamp.c
serveez-0.2.2/src/irc-server/.deps/: irc-config.Po  irc-crypt.Po  irc-event-1.Po  irc-event-2.Po  irc-event-3.Po  irc-event-4.Po  irc-event-5.Po  irc-event-6.Po  irc-event-7.Po  irc-proto.Po  irc-server.Po
serveez-0.2.2/src/libserveez/: ChangeLog  Makefile  Makefile.am  Makefile.in  address.c  address.h  address.lo  alloc.c  alloc.h  array.c  array.h  array.lo  binding.c  binding.h  boot.c  boot.h  boot.lo  cfg.c  cfg.h  cfg.lo  core.c  core.h  core.lo  defines.h  dynload.c  dynload.h  dynload.lo  hash.c  hash.h  icmp-socket.c  icmp-socket.h  icmp-socket.lo  interface.c  interface.h  interface.lo  ipdata.h  iphlpapi.h  libserveez.la  mutex.c  mutex.h  (+40 more)
serveez-0.2.2/src/libserveez/.deps/: address.Plo  alloc.Plo  array.Plo  binding.Plo  boot.Plo  cfg.Plo  core.Plo  dynload.Plo  hash.Plo  icmp-socket.Plo  interface.Plo  mutex.Plo  passthrough.Plo  pipe-socket.Plo  portcfg.Plo  raw-socket.Plo  server-core.Plo  server-loop.Plo  server-socket.Plo  server.Plo  socket.Plo  soprop.Plo  tcp-socket.Plo  udp-socket.Plo  util.Plo
serveez-0.2.2/src/libserveez/codec/: Makefile  Makefile.am  Makefile.in  bzip2.c  bzip2.h  codec.c  codec.h  codec.lo  gzlib.c  gzlib.h  libcodec.la
serveez-0.2.2/src/libserveez/codec/.deps/: codec.Plo
serveez-0.2.2/src/libserveez/coserver/: Makefile  Makefile.am  Makefile.in  coserver.c  coserver.h  coserver.lo  dns.c  dns.h  dns.lo  ident.c  ident.h  ident.lo  libcoserver.la  reverse-dns.c  reverse-dns.h  reverse-dns.lo  xerror.c  xerror.h
serveez-0.2.2/src/libserveez/coserver/.deps/: coserver.Plo  dns.Plo  ident.Plo  reverse-dns.Plo  xerror.Plo
serveez-0.2.2/src/nut-server/: Makefile  Makefile.am  Makefile.in  gnutella.c  gnutella.h  nut-core.c  nut-core.h  nut-hostlist.c  nut-hostlist.h  nut-request.c  nut-request.h  nut-route.c  nut-route.h  nut-transfer.c  nut-transfer.h
serveez-0.2.2/src/nut-server/.deps/: gnutella.Po  nut-core.Po  nut-hostlist.Po  nut-request.Po  nut-route.Po  nut-transfer.Po
serveez-0.2.2/src/prog-server/: Makefile  Makefile.am  Makefile.in  prog-server.c  prog-server.h
serveez-0.2.2/src/prog-server/.deps/: prog-server.Po
serveez-0.2.2/src/sntp-server/: Makefile  Makefile.am  Makefile.in  sntp-proto.c  sntp-proto.h
serveez-0.2.2/src/sntp-server/.deps/: sntp-proto.Po
serveez-0.2.2/src/tunnel-server/: Makefile  Makefile.am  Makefile.in  tunnel.c  tunnel.h
serveez-0.2.2/src/tunnel-server/.deps/: tunnel.Po
serveez-0.2.2/test/: ChangeLog  Makefile  Makefile.am  Makefile.in  btdt.c  common  t000  t001  t002  t003  t004  t005  t006  t007  t008  test-suite.scm
